Fixed white space below footer issue. Footer is now now fixed-bottom.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,10 +10,20 @@ section {
 
 }
 
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+}
+
+
 /* Styling for About Me section. */
 #aboutMe {
-    background-color: white;
-    /* border-radius: 1rem; */
+    background-color:lightseagreen;
     display: block;
 }
 
@@ -54,15 +64,15 @@ section {
 
 #emailAndPhoneNumber {
     padding: 0; 
-    /* margin-top: 15px; */
     color: white;
 }
 
 /* Styling for about me image. */
- #headshot {
+#headshot {
     float: left;
     margin-right: 20px;
     width:50%;
+    border-radius: 1rem;
 }
 
 .portfolioshots {
@@ -76,10 +86,18 @@ section {
 /* Footer styling.  */
 footer {
     background-color: rgb(58, 57, 57);
-    padding: 15px;
+    /* padding: 15px; */
     color: white;
     text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 90px;
+    line-height: 80px; /* Vertically center the text there */
+    /* background-color: #f5f5f5; */
 }
+
 
 @media only screen and (max-width: 991px) {
     #portfolioPage, .LI-profile-badge {
